Bug 1724540 [wpt PR 29936] - Update wpt metadata, a=testonly
wpt-pr: 29936
wpt-type: metadata

UltraBlame original commit: 98ee92f33b5c4e9b54809a86049ea920b89f7ed5

--- a/testing/web-platform/meta/url/a-element-xhtml.xhtml.ini
+++ b/testing/web-platform/meta/url/a-element-xhtml.xhtml.ini
@@ -6906,3 +6906,90 @@ blank
 expected
 :
 FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+0999999999999999999
+/
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+foo
+.
+0x
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+.
+123
+/
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
