--- a/testing/web-platform/meta/url/failure.html.ini
+++ b/testing/web-platform/meta/url/failure.html.ini
@@ -7939,3 +7939,457 @@ throw
 expected
 :
 FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+0999999999999999999
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+0999999999999999999
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+0999999999999999999
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+0999999999999999999
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+0999999999999999999
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+0999999999999999999
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+0x
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+0x
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+0x
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+0x
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+0x
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+0x
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+constructor
+'
+s
+base
+argument
+:
+http
+:
+/
+/
+.
+123
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+URL
+'
+s
+href
+:
+http
+:
+/
+/
+.
+123
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+XHR
+:
+http
+:
+/
+/
+.
+123
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+sendBeacon
+(
+)
+:
+http
+:
+/
+/
+.
+123
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+Location
+'
+s
+href
+:
+http
+:
+/
+/
+.
+123
+/
+should
+throw
+]
+expected
+:
+FAIL
+[
+window
+.
+open
+(
+)
+:
+http
+:
+/
+/
+.
+123
+/
+should
+throw
+]
+expected
+:
+FAIL
