--- a/testing/web-platform/meta/url/url-constructor.any.js.ini
+++ b/testing/web-platform/meta/url/url-constructor.any.js.ini
@@ -5251,6 +5251,93 @@ expected
 :
 FAIL
 [
+Parsing
+:
+<
+http
+:
+/
+/
+0999999999999999999
+/
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+foo
+.
+0x
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+.
+123
+/
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
 url
 -
 constructor
@@ -10489,6 +10576,93 @@ foo
 .
 0x4
 .
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+0999999999999999999
+/
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+foo
+.
+0x
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+foo
+.
+0XFfFfFfFfFfFfFfFfFfAcE123
+>
+against
+<
+about
+:
+blank
+>
+]
+expected
+:
+FAIL
+[
+Parsing
+:
+<
+http
+:
+/
+/
+.
+123
+/
 >
 against
 <
