Bug 1724773 [wpt PR 29948] - Update wpt metadata, a=testonly
wpt-pr: 29948
wpt-type: metadata

UltraBlame original commit: 3890fccd876bf3564d806ad5215a3bb254a86a55

--- a/testing/web-platform/meta/css/css-contain/content-visibility/content-visibility-026.html.ini
+++ b/testing/web-platform/meta/css/css-contain/content-visibility/content-visibility-026.html.ini
@@ -74,3 +74,41 @@ overridden
 expected
 :
 FAIL
+[
+content
+-
+visibility
+:
+hidden
+does
+not
+affect
+computed
+value
+of
+'
+contain
+'
+]
+expected
+:
+FAIL
+[
+content
+-
+visibility
+:
+auto
+does
+not
+affect
+computed
+value
+of
+'
+contain
+'
+]
+expected
+:
+FAIL
