Bug 1724541 [wpt PR 29937] - Update wpt metadata, a=testonly
wpt-pr: 29937
wpt-type: metadata

UltraBlame original commit: 053ba40d48d96c8558acda44809b4f94d617d34d

--- a/testing/web-platform/meta/app-history/navigate/reload-no-args.html.ini
+++ b/testing/web-platform/meta/app-history/navigate/reload-no-args.html.ini
@@ -1,22 +1,22 @@
 [
-navigate
+reload
 -
-without
+no
 -
-url
--
-arg
+args
 .
 html
 ]
 [
-navigate
+reload
 (
 )
 variant
 with
 no
-url
+state
+or
+info
 ]
 expected
 :
