--- a/testing/web-platform/meta/app-history/navigate-event/respondWith-multiple-times.html.ini
+++ b/testing/web-platform/meta/app-history/navigate-event/respondWith-multiple-times.html.ini
@@ -21,3 +21,28 @@ once
 expected
 :
 FAIL
+[
+appHistory
+.
+navigate
+(
+)
+returns
+a
+promise
+that
+awaits
+all
+promises
+if
+AppHistoryNavigateEvent
+.
+respondWith
+is
+called
+multiple
+times
+]
+expected
+:
+FAIL
