--- a/testing/web-platform/tests/html/canvas/tools/yaml/element/text-styles.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/element/text-styles.yaml
@@ -220,6 +220,102 @@ serif
 moz
 -
 todo
+-
+name
+:
+2d
+.
+text
+.
+font
+.
+parse
+.
+family
+testing
+:
+-
+2d
+.
+text
+.
+font
+.
+parse
+-
+2d
+.
+text
+.
+font
+.
+get
+-
+2d
+.
+text
+.
+font
+.
+lineheight
+code
+:
+|
+ctx
+.
+font
+=
+'
+20px
+cursive
+fantasy
+monospace
+sans
+-
+serif
+serif
+UnquotedFont
+"
+QuotedFont
+\
+\
+\
+\
+\
+\
+"
+"
+'
+;
+assert
+ctx
+.
+font
+=
+=
+=
+'
+20px
+cursive
+fantasy
+monospace
+sans
+-
+serif
+serif
+UnquotedFont
+"
+QuotedFont
+\
+\
+\
+\
+\
+\
+"
+"
+'
+;
 #
 TODO
 :
