--- a/testing/web-platform/meta/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/tentative/cross-document-nav-same-document-traversal.html.ini
+++ b/testing/web-platform/meta/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/tentative/cross-document-nav-same-document-traversal.html.ini
@@ -41,12 +41,6 @@ linux
 )
 and
 debug
-and
-not
-fission
-and
-not
-swgl
 :
 [
 FAIL
@@ -130,6 +124,22 @@ processor
 x86
 "
 )
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
 :
 [
 FAIL
