Bug 1725689 - Pref on class static blocks by default r=yulia
Differential Revision: https://phabricator.services.mozilla.com/D122639

UltraBlame original commit: 15e8b8ab74161439c50618041304b861e871dfe7

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -36443,6 +36443,11 @@ mirror
 :
 always
 #
+endif
+/
+/
+NIGHTLY_BUILD
+#
 Experimental
 support
 for
@@ -36467,15 +36472,10 @@ type
 bool
 value
 :
-false
+true
 mirror
 :
 always
-#
-endif
-/
-/
-NIGHTLY_BUILD
 #
 Support
 for
