--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -141,14 +141,6 @@ skip
 -
 if
 =
-os
-=
-=
-"
-android
-"
-|
-|
 socketprocess_networking
 run
 -
@@ -2901,16 +2893,6 @@ test_trr_httpssvc
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 run
 -
 sequentially
@@ -2926,16 +2908,6 @@ test_trr_case_sensitivity
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 run
 -
 sequentially
@@ -2956,16 +2928,6 @@ test_trr_cname_chain
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 run
 -
 sequentially
@@ -3035,16 +2997,6 @@ test_use_httpssvc
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 run
 -
 sequentially
@@ -3060,16 +3012,6 @@ test_trr_additional_section
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 run
 -
 sequentially
@@ -3085,16 +3027,6 @@ test_trr_extended_error
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 run
 -
 sequentially
@@ -3110,16 +3042,6 @@ test_httpssvc_iphint
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 run
 -
 sequentially
@@ -3140,16 +3062,6 @@ test_httpssvc_priority
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-"
-android
-"
 run
 -
 sequentially
@@ -3426,14 +3338,15 @@ skip
 if
 =
 tsan
-|
-|
 os
 =
 =
 '
 android
 '
+#
+bug
+1622901
 run
 -
 sequentially
@@ -3454,14 +3367,6 @@ skip
 if
 =
 tsan
-|
-|
-os
-=
-=
-'
-android
-'
 run
 -
 sequentially
@@ -3545,14 +3450,6 @@ skip
 -
 if
 =
-os
-=
-=
-'
-android
-'
-|
-|
 socketprocess_networking
 #
 confirmation
@@ -3579,16 +3476,6 @@ test_trr_cancel
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-'
-android
-'
 run
 -
 sequentially
@@ -3604,16 +3491,6 @@ test_http_server_timing
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-'
-android
-'
 [
 test_dns_retry
 .
@@ -3627,18 +3504,8 @@ os
 =
 =
 '
-android
-'
-|
-|
-os
-=
-=
-'
 mac
 '
-|
-|
 socketprocess_networking
 #
 server
@@ -3695,16 +3562,6 @@ test_trr_domain
 .
 js
 ]
-skip
--
-if
-=
-os
-=
-=
-'
-android
-'
 [
 test_http3_progress
 .
