Bug 1721132 - Enable HTTPS RR by default, r=necko-reviewers,valentin
Differential Revision: https://phabricator.services.mozilla.com/D122519

UltraBlame original commit: 34c9c9b0de1713e4c40e457cd0b4af88941a6a67

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -59091,7 +59091,7 @@ type
 RelaxedAtomicBool
 value
 :
-IS_EARLY_BETA_OR_EARLIER
+true
 mirror
 :
 always
@@ -59116,7 +59116,7 @@ type
 RelaxedAtomicBool
 value
 :
-IS_EARLY_BETA_OR_EARLIER
+true
 mirror
 :
 always
