Bug 1725734 - Basic Web Locks implementation r=smaug,asuth
Differential Revision: https://phabricator.services.mozilla.com/D122656

UltraBlame original commit: c0715e519fb270388e57201af5e57be488e710bb

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -22619,6 +22619,31 @@ always
 #
 Whether
 the
+Web
+Locks
+API
+is
+enabled
+-
+name
+:
+dom
+.
+weblocks
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
+Whether
+the
 WebMIDI
 API
 is
