Backed out changeset c0715e519fb2 (bug 1725734) for causing web-locks wpt failures. CLOSED TREE
UltraBlame original commit: f0dbd27f79b6fc8b1cced895fac887bb6c2327e4

--- a/testing/web-platform/meta/web-locks/mode-mixed.tentative.https.any.js.ini
+++ b/testing/web-platform/meta/web-locks/mode-mixed.tentative.https.any.js.ini
@@ -1,7 +1,7 @@
 [
 mode
 -
-exclusive
+mixed
 .
 tentative
 .
@@ -11,18 +11,6 @@ any
 .
 html
 ]
-[
-Requests
-for
-distinct
-resources
-can
-be
-granted
-]
-expected
-:
-FAIL
 [
 Lock
 requests
@@ -37,7 +25,7 @@ FAIL
 [
 mode
 -
-exclusive
+mixed
 .
 tentative
 .
@@ -50,18 +38,6 @@ worker
 html
 ]
 [
-Requests
-for
-distinct
-resources
-can
-be
-granted
-]
-expected
-:
-FAIL
-[
 Lock
 requests
 are
@@ -75,7 +51,7 @@ FAIL
 [
 mode
 -
-exclusive
+mixed
 .
 tentative
 .
@@ -88,18 +64,6 @@ serviceworker
 html
 ]
 [
-Requests
-for
-distinct
-resources
-can
-be
-granted
-]
-expected
-:
-FAIL
-[
 Lock
 requests
 are
@@ -113,7 +77,7 @@ FAIL
 [
 mode
 -
-exclusive
+mixed
 .
 tentative
 .
@@ -125,18 +89,6 @@ sharedworker
 .
 html
 ]
-[
-Requests
-for
-distinct
-resources
-can
-be
-granted
-]
-expected
-:
-FAIL
 [
 Lock
 requests
