--- a/testing/web-platform/meta/web-locks/mode-shared.tentative.https.any.js.ini
+++ b/testing/web-platform/meta/web-locks/mode-shared.tentative.https.any.js.ini
@@ -1,7 +1,7 @@
 [
 mode
 -
-exclusive
+shared
 .
 tentative
 .
@@ -12,13 +12,11 @@ any
 html
 ]
 [
-Requests
-for
-distinct
-resources
-can
-be
-granted
+Shared
+locks
+are
+not
+exclusive
 ]
 expected
 :
@@ -37,7 +35,7 @@ FAIL
 [
 mode
 -
-exclusive
+shared
 .
 tentative
 .
@@ -50,13 +48,11 @@ worker
 html
 ]
 [
-Requests
-for
-distinct
-resources
-can
-be
-granted
+Shared
+locks
+are
+not
+exclusive
 ]
 expected
 :
@@ -75,7 +71,7 @@ FAIL
 [
 mode
 -
-exclusive
+shared
 .
 tentative
 .
@@ -87,14 +83,40 @@ serviceworker
 .
 html
 ]
+expected
+:
+if
+webrender
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+fission
+:
 [
-Requests
-for
-distinct
-resources
-can
-be
-granted
+"
+OK
+"
+"
+ERROR
+"
+]
+[
+Shared
+locks
+are
+not
+exclusive
 ]
 expected
 :
@@ -113,7 +135,7 @@ FAIL
 [
 mode
 -
-exclusive
+shared
 .
 tentative
 .
@@ -126,13 +148,11 @@ sharedworker
 html
 ]
 [
-Requests
-for
-distinct
-resources
-can
-be
-granted
+Shared
+locks
+are
+not
+exclusive
 ]
 expected
 :
