--- a/testing/web-platform/meta/web-locks/query.tentative.https.any.js.ini
+++ b/testing/web-platform/meta/web-locks/query.tentative.https.any.js.ini
@@ -9,6 +9,68 @@ any
 .
 html
 ]
+expected
+:
+ERROR
+[
+query
+(
+)
+reports
+the
+same
+clientId
+for
+held
+locks
+from
+the
+same
+context
+]
+expected
+:
+FAIL
+[
+query
+(
+)
+reports
+held
+shared
+locks
+with
+appropriate
+count
+]
+expected
+:
+FAIL
+[
+query
+(
+)
+returns
+dictionaries
+with
+expected
+properties
+]
+expected
+:
+FAIL
+[
+query
+(
+)
+reports
+individual
+held
+locks
+]
+expected
+:
+FAIL
 [
 query
 (
@@ -17,6 +79,21 @@ can
 observe
 a
 deadlock
+]
+expected
+:
+NOTRUN
+[
+query
+(
+)
+reports
+pending
+shared
+locks
+with
+appropriate
+count
 ]
 expected
 :
@@ -34,6 +111,31 @@ locks
 from
 different
 contexts
+]
+expected
+:
+TIMEOUT
+[
+query
+(
+)
+reports
+pending
+and
+held
+locks
+]
+expected
+:
+FAIL
+[
+query
+(
+)
+reports
+multiple
+held
+locks
 ]
 expected
 :
@@ -51,6 +153,68 @@ worker
 .
 html
 ]
+expected
+:
+ERROR
+[
+query
+(
+)
+reports
+the
+same
+clientId
+for
+held
+locks
+from
+the
+same
+context
+]
+expected
+:
+FAIL
+[
+query
+(
+)
+reports
+held
+shared
+locks
+with
+appropriate
+count
+]
+expected
+:
+FAIL
+[
+query
+(
+)
+returns
+dictionaries
+with
+expected
+properties
+]
+expected
+:
+FAIL
+[
+query
+(
+)
+reports
+individual
+held
+locks
+]
+expected
+:
+FAIL
 [
 query
 (
@@ -59,6 +223,21 @@ can
 observe
 a
 deadlock
+]
+expected
+:
+NOTRUN
+[
+query
+(
+)
+reports
+pending
+shared
+locks
+with
+appropriate
+count
 ]
 expected
 :
@@ -76,6 +255,31 @@ locks
 from
 different
 contexts
+]
+expected
+:
+TIMEOUT
+[
+query
+(
+)
+reports
+pending
+and
+held
+locks
+]
+expected
+:
+FAIL
+[
+query
+(
+)
+reports
+multiple
+held
+locks
 ]
 expected
 :
