Bug 1726180 - Include |api| dependencies in pom file. r=mhentges,owlish
Glean introduced a new type of dependencies (for us), "api". Since we build our
pom file manually we need to look at api dependencies too now.

Differential Revision: https://phabricator.services.mozilla.com/D122869

UltraBlame original commit: c51887d6a056fb2e012317b90d23ad1de3dd6360

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -4537,13 +4537,25 @@ appendNode
 dependencies
 '
 )
+for
+(
+configurationName
+in
+[
+"
+implementation
+"
+"
+api
+"
+]
+)
+{
 configurations
 .
 getByName
 (
-"
-implementation
-"
+configurationName
 )
 .
 dependencies
@@ -4594,6 +4606,7 @@ it
 .
 version
 )
+}
 }
 }
 }
