--- a/mobile/android/installer/package-manifest.in
+++ b/mobile/android/installer/package-manifest.in
@@ -353,6 +353,16 @@ gvr
 DLL_SUFFIX
 #
 endif
+#
+ifdef
+MOZ_USING_WASM_SANDBOXING
+BINPATH
+/
+DLL_PREFIX
+rlbox
+DLL_SUFFIX
+#
+endif
 [
 xpcom
 ]
