Bug 1725734 - Basic Web Locks implementation r=smaug,asuth
Differential Revision: https://phabricator.services.mozilla.com/D122656

UltraBlame original commit: 1120bc195df974cbd4d359dec49c2cb82953ec74

--- a/testing/web-platform/meta/web-locks/signal.tentative.https.any.js.ini
+++ b/testing/web-platform/meta/web-locks/signal.tentative.https.any.js.ini
@@ -9,34 +9,14 @@ any
 .
 html
 ]
-[
-The
-signal
-option
-must
-be
-an
-AbortSignal
-]
 expected
 :
-FAIL
+ERROR
 [
 Abort
 after
 a
 timeout
-]
-expected
-:
-FAIL
-[
-Passing
-an
-already
-aborted
-signal
-aborts
 ]
 expected
 :
@@ -58,7 +38,7 @@ released
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 Signal
 that
@@ -78,7 +58,7 @@ granted
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 An
 aborted
@@ -103,34 +83,14 @@ worker
 .
 html
 ]
-[
-The
-signal
-option
-must
-be
-an
-AbortSignal
-]
 expected
 :
-FAIL
+TIMEOUT
 [
 Abort
 after
 a
 timeout
-]
-expected
-:
-FAIL
-[
-Passing
-an
-already
-aborted
-signal
-aborts
 ]
 expected
 :
@@ -152,7 +112,7 @@ released
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 Signal
 that
@@ -172,7 +132,7 @@ granted
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 An
 aborted
@@ -197,34 +157,14 @@ serviceworker
 .
 html
 ]
-[
-The
-signal
-option
-must
-be
-an
-AbortSignal
-]
 expected
 :
-FAIL
+TIMEOUT
 [
 Abort
 after
 a
 timeout
-]
-expected
-:
-FAIL
-[
-Passing
-an
-already
-aborted
-signal
-aborts
 ]
 expected
 :
@@ -246,7 +186,7 @@ released
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 Signal
 that
@@ -266,7 +206,7 @@ granted
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 An
 aborted
@@ -291,34 +231,14 @@ sharedworker
 .
 html
 ]
-[
-The
-signal
-option
-must
-be
-an
-AbortSignal
-]
 expected
 :
-FAIL
+TIMEOUT
 [
 Abort
 after
 a
 timeout
-]
-expected
-:
-FAIL
-[
-Passing
-an
-already
-aborted
-signal
-aborts
 ]
 expected
 :
@@ -340,7 +260,7 @@ released
 ]
 expected
 :
-FAIL
+NOTRUN
 [
 Signal
 that
@@ -360,7 +280,7 @@ granted
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 An
 aborted
