Bug 1726100 - Add missing wasi sysroot dependencies . CLOSED TREE
Differential Revision: https://phabricator.services.mozilla.com/D122925

UltraBlame original commit: 5d9dd7ad0af42f870932ce94c2f3c0522f8ae4ed

--- a/taskcluster/ci/source-test/clang.yml
+++ b/taskcluster/ci/source-test/clang.yml
@@ -418,6 +418,12 @@ x86_64
 linux
 -
 gnu
+-
+sysroot
+-
+wasm32
+-
+wasi
 worker
 :
 artifacts
@@ -787,6 +793,12 @@ x86_64
 linux
 -
 gnu
+-
+sysroot
+-
+wasm32
+-
+wasi
 worker
 :
 artifacts
@@ -949,6 +961,12 @@ x86_64
 linux
 -
 gnu
+-
+sysroot
+-
+wasm32
+-
+wasi
 macosx64
 -
 non
@@ -1113,3 +1131,9 @@ x86_64
 linux
 -
 gnu
+-
+sysroot
+-
+wasm32
+-
+wasi
