--- a/taskcluster/ci/source-test/file-metadata.yml
+++ b/taskcluster/ci/source-test/file-metadata.yml
@@ -324,6 +324,12 @@ x86_64
 linux
 -
 gnu
+-
+sysroot
+-
+wasm32
+-
+wasi
 run
 :
 using
@@ -541,6 +547,12 @@ x86_64
 linux
 -
 gnu
+-
+sysroot
+-
+wasm32
+-
+wasi
 run
 :
 using
@@ -770,6 +782,12 @@ x86_64
 linux
 -
 gnu
+-
+sysroot
+-
+wasm32
+-
+wasi
 run
 :
 using
@@ -1247,6 +1265,12 @@ x86_64
 linux
 -
 gnu
+-
+sysroot
+-
+wasm32
+-
+wasi
 run
 :
 using
