Bug 1726117 - Add hack for new versions of apt. r=taskgraph-reviewers,bhearsum
to work around issues with redirections.

Differential Revision: https://phabricator.services.mozilla.com/D122829

UltraBlame original commit: 8b9c521fb78a71b087096522de12566f22ab609b

--- a/taskcluster/docker/debian-raw/Dockerfile
+++ b/taskcluster/docker/debian-raw/Dockerfile
@@ -68,6 +68,18 @@ local
 /
 sbin
 /
+COPY
+taskcluster
+-
+hack
+.
+sh
+/
+usr
+/
+local
+/
+sbin
 ARG
 DIST
 ARG
@@ -343,6 +355,69 @@ Retries
 "
 ;
 '
+;
+\
+if
+dpkg
+-
+-
+compare
+-
+versions
+(
+apt
+-
+-
+version
+|
+awk
+'
+{
+print
+2
+}
+'
+)
+ge
+2
+.
+1
+.
+15
+;
+then
+\
+echo
+'
+dir
+:
+:
+bin
+:
+:
+methods
+:
+:
+https
+"
+/
+usr
+/
+local
+/
+sbin
+/
+taskcluster
+-
+hack
+.
+sh
+"
+;
+'
+;
+\
+fi
 ;
 \
 )
