Bug 1726117 - Add Debian 11-based Docker images. r=taskgraph-reviewers,bhearsum
Differential Revision: https://phabricator.services.mozilla.com/D122830

UltraBlame original commit: 939a0f2709ab47e1703d575377e928787602426e

--- a/taskcluster/docker/debian-raw/Dockerfile
+++ b/taskcluster/docker/debian-raw/Dockerfile
@@ -130,8 +130,8 @@ debian
 -
 security_
 DIST
-/
-updates
+-
+security
 debian
 -
 debug_
@@ -220,6 +220,68 @@ debug
 archive
 for
 Jessie
+;
+\
+;
+;
+\
+debian
+-
+security_jessie
+-
+security
+|
+debian
+-
+security_buster
+-
+security
+)
+\
+d
+=
+{
+s
+#
+*
+_
+}
+;
+\
+echo
+"
+deb
+http
+:
+/
+/
+snapshot
+.
+debian
+.
+org
+/
+archive
+/
+{
+s
+%
+_
+*
+}
+/
+SNAPSHOT
+/
+{
+d
+%
+-
+security
+}
+/
+updates
+main
+"
 ;
 \
 ;
