--- a/browser/base/content/test/contextMenu/browser.ini
+++ b/browser/base/content/test/contextMenu/browser.ini
@@ -96,6 +96,28 @@ js
 https_first_disabled
 =
 true
+skip
+-
+if
+=
+os
+=
+=
+'
+win
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+#
+Bug
+1719856
 [
 browser_contextmenu_inspect
 .
