Backed out 2 changesets (bug 1726117) for causing build bustages. CLOSED TREE
Backed out changeset b283bf726fae (bug 1726117)
Backed out changeset df484aca0256 (bug 1726117)

UltraBlame original commit: 0a2ea4ddc8d51c21798c1f64ceaa00b87d112836

--- a/taskcluster/ci/docker-image/kind.yml
+++ b/taskcluster/ci/docker-image/kind.yml
@@ -634,6 +634,40 @@ debian8
 i386
 -
 raw
+deb10
+-
+toolchain
+-
+build
+:
+symbol
+:
+I
+(
+deb10
+-
+toolchain
+)
+parent
+:
+debian10
+-
+base
+definition
+:
+toolchain
+-
+build
+packages
+:
+-
+deb10
+-
+cmake
+-
+deb10
+-
+mmdebstrap
 custom
 -
 v8
@@ -795,6 +829,28 @@ deb10
 python
 -
 zstandard
+debian10
+-
+amd64
+-
+build
+:
+symbol
+:
+I
+(
+deb10
+)
+parent
+:
+debian10
+-
+base
+definition
+:
+debian
+-
+build
 debian10
 -
 test
@@ -1062,7 +1118,7 @@ gdb
 )
 parent
 :
-debian11
+debian10
 -
 amd64
 -
