Bug 1726309 - don't skip tests on macOS 11 which actually pass. r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D122938

UltraBlame original commit: 91baaad7e92151c686410d0e883428fb89c792bb

--- a/browser/components/extensions/test/browser/browser.ini
+++ b/browser/components/extensions/test/browser/browser.ini
@@ -918,6 +918,10 @@ skip
 if
 =
 apple_silicon
+&
+&
+!
+fission
 [
 browser_ext_incognito_popup
 .
@@ -991,11 +995,6 @@ browser_ext_menus_replace_menu
 .
 js
 ]
-skip
--
-if
-=
-apple_silicon
 [
 browser_ext_menus_replace_menu_context
 .
@@ -1096,7 +1095,6 @@ mac
 '
 )
 )
-apple_silicon
 [
 browser_ext_optionsPage_browser_style
 .
