Bug 1689101 - disable browser_webconsole_network_messages_expand_before_updates.js on Linux_64_QR for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122955

UltraBlame original commit: c8aa1ced6aaa692b9d307990629c0479dd44b128

--- a/devtools/client/webconsole/test/browser/_webconsole.ini
+++ b/devtools/client/webconsole/test/browser/_webconsole.ini
@@ -2484,6 +2484,24 @@ bits
 #
 Bug
 1689101
+os
+=
+=
+'
+linux
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+#
+Bug
+1689101
 [
 browser_webconsole_network_messages_expand
 .
