Bug 1552288 - disable browser_toggleTransparentOverlay-1.js on Linux_64_QR for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122961

UltraBlame original commit: 9698b4b0b32fca20c0f94ca7c610445d6f1e07aa

--- a/toolkit/components/pictureinpicture/tests/browser.ini
+++ b/toolkit/components/pictureinpicture/tests/browser.ini
@@ -840,6 +840,28 @@ browser_toggleTransparentOverlay
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+linux
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+#
+Bug
+1552288
 [
 browser_toggleTransparentOverlay
 -
