Bug 1645565 - disable test_ext_contentscript_fission_frame.html on OS_X_10.15_64_opt and windows_10_64_opt for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122954

UltraBlame original commit: 1ad45ece4e1daacb651b59eced86d1a468ef78e3

--- a/toolkit/components/extensions/test/mochitest/mochitest-common.ini
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.ini
@@ -534,6 +534,48 @@ test_ext_contentscript_fission_frame
 .
 html
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+mac
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+!
+debug
+#
+Bug
+1645565
+os
+=
+=
+'
+win
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+!
+debug
+#
+Bug
+1645565
 [
 test_ext_contentscript_incognito
 .
