Bug 1718223 - Allow pref to control max throughput of EME decryption r=bryce
Adds a pref `media.eme.max-throughput-ms` to allow users to modify EME's maximum decryption rate. The default value is 200ms which is the same as the old hard-coded value.

Differential Revision: https://phabricator.services.mozilla.com/D122876

UltraBlame original commit: 75eac140369bc246f85955f1f492e378a9916b37

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -48960,6 +48960,27 @@ name
 :
 media
 .
+eme
+.
+max
+-
+throughput
+-
+ms
+type
+:
+RelaxedAtomicUint32
+value
+:
+200
+mirror
+:
+always
+-
+name
+:
+media
+.
 clearkey
 .
 persistent
