Bug 1711912 - Add test case to ensure special key systems are only available if preffed on. r=alwu
Differential Revision: https://phabricator.services.mozilla.com/D122634

UltraBlame original commit: db34f1ec3a86fe430507071ff9e33e8430e266a4

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -7173,6 +7173,27 @@ scheme
 =
 https
 [
+test_eme_special_key_system
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1149374
+scheme
+=
+https
+[
 test_eme_stream_capture_blocked_case1
 .
 html
