--- a/browser/extensions/webcompat/manifest.json
+++ b/browser/extensions/webcompat/manifest.json
@@ -35,7 +35,7 @@ version
 "
 25
 .
-6
+7
 .
 0
 "
@@ -587,6 +587,15 @@ web_accessible_resources
 "
 :
 [
+"
+shims
+/
+addthis
+-
+angular
+.
+js
+"
 "
 shims
 /
