Bug 1725540 - Get top level window's resolution via SpecialPowers.spawn. r=tnikkel
Thus a bunch of relevant functions need to be async.

Differential Revision: https://phabricator.services.mozilla.com/D122559

UltraBlame original commit: 7e795e95ddda3f9b8fb6fe4cff9077834f8b898e

--- a/gfx/layers/apz/test/mochitest/mochitest.ini
+++ b/gfx/layers/apz/test/mochitest/mochitest.ini
@@ -81,44 +81,13 @@ xorigin
 JavaScript
 error
 :
-http
-:
-/
-/
-mochi
-.
-test
-:
-8888
-/
-tests
-/
-gfx
-/
-layers
-/
-apz
-/
-test
-/
-mochitest
-/
-apz_test_native_event_utils
-.
-js
 line
-10
+0
 :
-Error
+uncaught
+exception
 :
-Permission
-denied
-to
-access
-property
-"
-getResolution
-"
+Object
 [
 test_bug1253683
 .
@@ -158,44 +127,13 @@ xorigin
 JavaScript
 error
 :
-http
-:
-/
-/
-mochi
-.
-test
-:
-8888
-/
-tests
-/
-gfx
-/
-layers
-/
-apz
-/
-test
-/
-mochitest
-/
-apz_test_native_event_utils
-.
-js
 line
-10
+0
 :
-Error
+uncaught
+exception
 :
-Permission
-denied
-to
-access
-property
-"
-getResolution
-"
+Object
 [
 test_bug1277814
 .
@@ -223,44 +161,13 @@ xorigin
 JavaScript
 error
 :
-http
-:
-/
-/
-mochi
-.
-test
-:
-8888
-/
-tests
-/
-gfx
-/
-layers
-/
-apz
-/
-test
-/
-mochitest
-/
-apz_test_native_event_utils
-.
-js
 line
-10
+0
 :
-Error
+uncaught
+exception
 :
-Permission
-denied
-to
-access
-property
-"
-getResolution
-"
+Object
 [
 test_bug1304689
 .
@@ -709,49 +616,6 @@ not
 supported
 on
 mobile
-xorigin
-#
-JavaScript
-error
-:
-http
-:
-/
-/
-mochi
-.
-test
-:
-8888
-/
-tests
-/
-gfx
-/
-layers
-/
-apz
-/
-test
-/
-mochitest
-/
-apz_test_native_event_utils
-.
-js
-line
-10
-:
-Error
-:
-Permission
-denied
-to
-access
-property
-"
-getResolution
-"
 os
 =
 =
@@ -767,6 +631,18 @@ headless
 #
 Bug
 1722907
+xorigin
+#
+JavaScript
+error
+:
+line
+0
+:
+uncaught
+exception
+:
+Object
 [
 test_relative_update
 .
@@ -794,44 +670,13 @@ xorigin
 JavaScript
 error
 :
-http
-:
-/
-/
-mochi
-.
-test
-:
-8888
-/
-tests
-/
-gfx
-/
-layers
-/
-apz
-/
-test
-/
-mochitest
-/
-apz_test_native_event_utils
-.
-js
 line
-10
+0
 :
-Error
+uncaught
+exception
 :
-Permission
-denied
-to
-access
-property
-"
-getResolution
-"
+Object
 [
 test_scroll_inactive_bug1190112
 .
@@ -948,44 +793,13 @@ xorigin
 JavaScript
 error
 :
-http
-:
-/
-/
-mochi
-.
-test
-:
-8888
-/
-tests
-/
-gfx
-/
-layers
-/
-apz
-/
-test
-/
-mochitest
-/
-apz_test_native_event_utils
-.
-js
 line
-10
+0
 :
-Error
+uncaught
+exception
 :
-Permission
-denied
-to
-access
-property
-"
-getResolution
-"
+Object
 [
 test_wheel_scroll
 .
@@ -1010,7 +824,16 @@ on
 mobile
 xorigin
 #
-Hangs
+JavaScript
+error
+:
+line
+0
+:
+uncaught
+exception
+:
+Object
 [
 test_wheel_transactions
 .
@@ -1035,7 +858,16 @@ on
 mobile
 xorigin
 #
-Hangs
+JavaScript
+error
+:
+line
+0
+:
+uncaught
+exception
+:
+Object
 [
 test_group_overrides
 .
