--- a/gfx/layers/apz/test/mochitest/mochitest.ini
+++ b/gfx/layers/apz/test/mochitest/mochitest.ini
@@ -76,18 +76,6 @@ not
 supported
 on
 mobile
-xorigin
-#
-JavaScript
-error
-:
-line
-0
-:
-uncaught
-exception
-:
-Object
 [
 test_bug1253683
 .
@@ -122,18 +110,6 @@ os
 '
 linux
 '
-xorigin
-#
-JavaScript
-error
-:
-line
-0
-:
-uncaught
-exception
-:
-Object
 [
 test_bug1277814
 .
@@ -156,18 +132,6 @@ not
 supported
 on
 mobile
-xorigin
-#
-JavaScript
-error
-:
-line
-0
-:
-uncaught
-exception
-:
-Object
 [
 test_bug1304689
 .
@@ -633,16 +597,21 @@ Bug
 1722907
 xorigin
 #
-JavaScript
-error
-:
-line
-0
-:
-uncaught
-exception
-:
-Object
+"
+scrolling
+'
+inner2
+'
+should
+cause
+it
+to
+be
+directly
+activated
+"
+etc
+.
 [
 test_relative_update
 .
@@ -665,18 +634,6 @@ not
 supported
 on
 mobile
-xorigin
-#
-JavaScript
-error
-:
-line
-0
-:
-uncaught
-exception
-:
-Object
 [
 test_scroll_inactive_bug1190112
 .
@@ -788,18 +745,6 @@ supported
 on
 OS
 X
-xorigin
-#
-JavaScript
-error
-:
-line
-0
-:
-uncaught
-exception
-:
-Object
 [
 test_wheel_scroll
 .
@@ -822,18 +767,6 @@ not
 supported
 on
 mobile
-xorigin
-#
-JavaScript
-error
-:
-line
-0
-:
-uncaught
-exception
-:
-Object
 [
 test_wheel_transactions
 .
@@ -856,18 +789,6 @@ not
 supported
 on
 mobile
-xorigin
-#
-JavaScript
-error
-:
-line
-0
-:
-uncaught
-exception
-:
-Object
 [
 test_group_overrides
 .
