Bug 1511231 - Part 3: Expose coalesced Touches to PointerEvent.getCoalescedEvents(); r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D122590

UltraBlame original commit: 94a5ef68aac320171dbf7e7bde7bbf775243e2f5

--- a/dom/events/test/pointerevents/mochitest.ini
+++ b/dom/events/test/pointerevents/mochitest.ini
@@ -986,6 +986,30 @@ win
 Bug
 1659744
 [
+test_getCoalescedEvents_touch
+.
+html
+]
+support
+-
+files
+=
+!
+/
+gfx
+/
+layers
+/
+apz
+/
+test
+/
+mochitest
+/
+apz_test_native_event_utils
+.
+js
+[
 test_pointercapture_xorigin_iframe
 .
 html
