Bug 1726064 - part 4: Make `HTMLEditor::HandleKeyPressEvent()` use `HTMLEditUtils::GetInclusiveAncestorElement()` r=m_kato
Differential Revision: https://phabricator.services.mozilla.com/D122942

UltraBlame original commit: ae7ce0245ffbd59a6ce935ad69bff4cf4a018de9

--- a/editor/libeditor/tests/mochitest.ini
+++ b/editor/libeditor/tests/mochitest.ini
@@ -1371,6 +1371,11 @@ test_handle_new_lines
 html
 ]
 [
+test_htmleditor_tab_key_handling
+.
+html
+]
+[
 test_initial_selection_and_caret_of_designMode
 .
 html
