Bug 1726475 - Make `Backspace` around `<hr>` element compatible with the other browsers r=m_kato
Currently, Gecko does not delete `<hr>` element by `Backspace` from the
following paragraph.  Instead, put caret to after `<hr>` element and then,
another `Backspace` deletes the `<hr>`.  This is clearer for users, but
incompatible with the other browsers.

The pref was introduced by <https://phabricator.services.mozilla.com/D88969>.
And let's try to enable it by default for testers.  I guess that it's rare
to allow web apps to allow `<hr>` element into `contenteditable`.  So, I'm
not sure whether this change can work as experiment.

Differential Revision: https://phabricator.services.mozilla.com/D123033

UltraBlame original commit: c3438ee0d186855c3c9e80cc5f95acadb3e71cc6

--- a/testing/web-platform/meta/editing/run/delete.html.ini
+++ b/testing/web-platform/meta/editing/run/delete.html.ini
@@ -7,6 +7,17 @@ html
 -
 1000
 ]
+prefs
+:
+[
+editor
+.
+hr_element
+.
+allow_to_delete_from_following_line
+:
+true
+]
 [
 [
 [
@@ -261,34 +272,6 @@ p
 /
 div
 >
-"
-compare
-innerHTML
-]
-expected
-:
-FAIL
-[
-[
-[
-"
-delete
-"
-"
-"
-\
-]
-\
-]
-"
-foo
-<
-hr
->
-[
-\
-]
-bar
 "
 compare
 innerHTML
