--- a/dom/events/test/pointerevents/mochitest.ini
+++ b/dom/events/test/pointerevents/mochitest.ini
@@ -986,6 +986,59 @@ win
 Bug
 1659744
 [
+test_getCoalescedEvents_touch
+.
+html
+]
+skip
+-
+if
+=
+!
+e10s
+|
+|
+os
+=
+=
+'
+android
+'
+#
+Bug
+1312791
+verify
+&
+&
+os
+=
+=
+'
+win
+'
+#
+Bug
+1659744
+support
+-
+files
+=
+!
+/
+gfx
+/
+layers
+/
+apz
+/
+test
+/
+mochitest
+/
+apz_test_native_event_utils
+.
+js
+[
 test_pointercapture_xorigin_iframe
 .
 html
