--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -59090,6 +59090,58 @@ mirror
 :
 always
 #
+Receive
+buffer
+size
+of
+QUIC
+socket
+-
+name
+:
+network
+.
+http
+.
+http3
+.
+max_data
+type
+:
+RelaxedAtomicUint32
+value
+:
+25165824
+mirror
+:
+always
+#
+Receive
+buffer
+size
+of
+QUIC
+socket
+-
+name
+:
+network
+.
+http
+.
+http3
+.
+max_stream_data
+type
+:
+RelaxedAtomicUint32
+value
+:
+12582912
+mirror
+:
+always
+#
 When
 true
 a
