Bug 1726582 - Fix "navigatior" typo in comments for VR prefs. r=KrisWright DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D123119

UltraBlame original commit: 94904e5b09142215670cfef9104cdaa1d2ce3460

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -20753,7 +20753,7 @@ runtimes
 and
 cause
 #
-navigatior
+navigator
 .
 xr
 .
@@ -20820,7 +20820,7 @@ runtimes
 and
 cause
 #
-navigatior
+navigator
 .
 xr
 .
