Backed out 2 changesets (bug 1718630) for permanent condprof failures. a=backout
Backed out changeset f281bc9e4fbc (bug 1718630)
Backed out changeset a80c47c6cc82 (bug 1718630)

UltraBlame original commit: ea355c855e5aaef2274a31e7e97809d74d6b4081

--- a/taskcluster/ci/test/browsertime-desktop.yml
+++ b/taskcluster/ci/test/browsertime-desktop.yml
@@ -2394,6 +2394,28 @@ shippable
 qr
 /
 opt
+#
+Bug
+1718630
+youtube
+-
+playback
+.
+*
+widevine
+.
+*
+:
+-
+(
+linux
+|
+macos
+)
+.
+*
+/
+opt
 default
 :
 [
