--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -7063,6 +7063,27 @@ scheme
 =
 https
 [
+test_eme_special_key_system
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1149374
+scheme
+=
+https
+[
 test_eme_stream_capture_blocked_case1
 .
 html
