Bug 1726606: Default browser.display.document_color_use to 1 on MacOS r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D123142

UltraBlame original commit: b1db4e355714ff722d1ba06fb71dcf2cd1a3e02f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6068,7 +6068,51 @@ mirror
 :
 never
 #
+This
+preference
+is
+a
+bit
+confusing
+because
+we
+use
+the
+opposite
+#
+string
+value
+in
+the
+colors
+dialog
+to
+indicate
+to
+users
+how
+FF
+HCM
+#
+will
+behave
+.
+#
+With
+resect
+to
+document
+colors
+these
+values
+mean
+:
+#
 0
+=
+"
+default
+"
 =
 always
 except
@@ -6079,22 +6123,44 @@ mode
 #
 1
 =
+"
 always
+"
 #
 2
 =
+"
 never
+"
 #
 #
-Default
+On
+windows
+we
+set
+this
 to
 0
-on
-windows
-and
-mac
+which
+means
+FF
+HCM
+will
+mirror
+OS
+HCM
+.
+#
+Everywhere
+else
+we
+set
+this
+to
 1
-elsewhere
+disabling
+FF
+HCM
 .
 -
 name
@@ -6112,12 +6178,6 @@ if
 defined
 (
 XP_WIN
-)
-|
-|
-defined
-(
-XP_MACOSX
 )
 value
 :
