Bug 1527181 - Add webgl.auto-flush:true. r=lsalzman
* webgl.auto-flush (default: true) enqueues a runnable to flush pending
  webgl commands after each draw.
* webgl.auto-flush.gl (default: false) causes this auto-flush to also
  call glFlush.

This is probably not useful for pure RAF-based apps, since they run
RAF();Present(); back-to-back. For other cases though, this should
improve latency and may reduce jank.

Differential Revision: https://phabricator.services.mozilla.com/D123031

UltraBlame original commit: 03f2371bb9981df04631f4634b5454fc62af9b5f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -70675,6 +70675,42 @@ name
 :
 webgl
 .
+auto
+-
+flush
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+-
+name
+:
+webgl
+.
+auto
+-
+flush
+.
+gl
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+-
+name
+:
+webgl
+.
 can
 -
 lose
