--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -5785,6 +5785,31 @@ h
 '
 }
 '
+OES_draw_buffers_indexed
+'
+:
+{
+'
+nativeType
+'
+:
+'
+mozilla
+:
+:
+ClientWebGLExtensionDrawBuffersIndexed
+'
+'
+headerFile
+'
+:
+'
+ClientWebGLExtensions
+.
+h
+'
+}
+'
 OES_element_index_uint
 '
 :
