Bug 1726064 - part 6: Make `HTMLEditor::RemoveEmptyInclusiveAncestorInlineElements()` use `HTMLEditUtils::GetAncestorElement()` r=m_kato
Differential Revision: https://phabricator.services.mozilla.com/D122944

UltraBlame original commit: 0bd2f11802cad09c160f97a016ac1f92f0bda41a

--- a/testing/web-platform/meta/editing/run/delete.html.ini
+++ b/testing/web-platform/meta/editing/run/delete.html.ini
@@ -9561,7 +9561,7 @@ html
 ?
 6001
 -
-last
+7000
 ]
 max
 -
@@ -12046,3 +12046,72 @@ PASS
 FAIL
 "
 ]
+[
+[
+[
+"
+delete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+span
+>
+[
+abc
+\
+]
+<
+/
+span
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+delete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+p
+>
+<
+span
+>
+[
+abc
+\
+]
+<
+/
+span
+>
+<
+/
+p
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
