--- a/testing/web-platform/meta/editing/run/forwarddelete.html.ini
+++ b/testing/web-platform/meta/editing/run/forwarddelete.html.ini
@@ -10253,3 +10253,72 @@ innerHTML
 expected
 :
 FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+span
+>
+[
+abc
+\
+]
+<
+/
+span
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+p
+>
+<
+span
+>
+[
+abc
+\
+]
+<
+/
+span
+>
+<
+/
+p
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
