Bug 1725416 - Default to eNotPressed in WidgetTouchEvent r=edgar
Differential Revision: https://phabricator.services.mozilla.com/D123100

UltraBlame original commit: 217fff940becafb2b90da8d5149f1ea72811b594

--- a/dom/events/test/pointerevents/mochitest.ini
+++ b/dom/events/test/pointerevents/mochitest.ini
@@ -147,6 +147,30 @@ bug_1420589_iframe1
 .
 html
 [
+test_bug1725416
+.
+html
+]
+support
+-
+files
+=
+!
+/
+gfx
+/
+layers
+/
+apz
+/
+test
+/
+mochitest
+/
+apz_test_native_event_utils
+.
+js
+[
 test_multiple_touches
 .
 html
