Bug 1726810: Pref off exiting of fullscreen on escape key events on macOS for now. r=mac-reviewers,bradwerth
Differential Revision: https://phabricator.services.mozilla.com/D123237

UltraBlame original commit: a533746e243528e46e857e1714cd2088cdecdf00

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -6873,6 +6873,39 @@ mirror
 :
 always
 #
+if
+defined
+(
+XP_MACOSX
+)
+#
+Whether
+pressing
+Esc
+will
+exit
+fullscreen
+.
+-
+name
+:
+browser
+.
+fullscreen
+.
+exit_on_escape
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+#
+endif
+#
 The
 max
 url
