Bug 1725800 - Also check if the uri path is the same when doing upgrade and downgrade loop check, r=ckerschb
Differential Revision: https://phabricator.services.mozilla.com/D122847

UltraBlame original commit: 033420d6bd5631f1c8807e5e7bb410c11da22e03

--- a/dom/security/test/https-first/mochitest.ini
+++ b/dom/security/test/https-first/mochitest.ini
@@ -118,6 +118,9 @@ files
 file_break_endless_upgrade_downgrade_loop
 .
 sjs
+file_downgrade_with_different_path
+.
+sjs
 [
 test_multiple_redirection
 .
