Bug 1604751 - disable browser_browser_toolbox_fission_contentframe_inspector.js on Linux_64_QR_debug for frequent failures. r=intermittent-reviewers,bhearsum DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122957

UltraBlame original commit: b9d9e5ea2a47950c02f14fa4ae05696ad4b21b52

--- a/devtools/client/framework/browser-toolbox/test/browser.ini
+++ b/devtools/client/framework/browser-toolbox/test/browser.ini
@@ -241,6 +241,31 @@ browser_browser_toolbox_fission_contentframe_inspector
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+linux
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+&
+&
+debug
+#
+Bug
+1604751
 [
 browser_browser_toolbox_fission_inspector_webextension
 .
