Bug 1723574 - Migrate Windows 10 mochitest-browser-chrome suite from AWS to Azure r=jmaher,preferences-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D122511

UltraBlame original commit: bce3993d64ba6d3f34367b943771ba45b8783a5a

--- a/browser/base/content/test/fullscreen/browser.ini
+++ b/browser/base/content/test/fullscreen/browser.ini
@@ -80,6 +80,14 @@ html
 fullscreen_frame
 .
 html
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_fullscreen_enterInUrlbar
 .
@@ -167,3 +175,11 @@ html
 FullscreenFrame
 .
 jsm
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
