--- a/browser/components/aboutlogins/tests/browser/browser.ini
+++ b/browser/components/aboutlogins/tests/browser/browser.ini
@@ -136,26 +136,69 @@ browser_alertDismissedAfterChangingPassword
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_breachAlertShowingForAddedLogin
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_confirmDeleteDialog
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_contextmenuFillLogins
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+&
+&
+debug
+#
+Bug
+1723573
 [
 browser_copyToClipboardButton
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_createLogin
 .
