--- a/browser/components/extensions/test/browser/browser.ini
+++ b/browser/components/extensions/test/browser/browser.ini
@@ -922,6 +922,10 @@ apple_silicon
 &
 !
 fission
+win10_2004
+#
+Bug
+1723573
 [
 browser_ext_incognito_popup
 .
@@ -995,6 +999,14 @@ browser_ext_menus_replace_menu
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_ext_menus_replace_menu_context
 .
@@ -1023,6 +1035,10 @@ skip
 if
 =
 apple_silicon
+win10_2004
+#
+Bug
+1723573
 [
 browser_ext_menus_targetElement_shadow
 .
@@ -1043,6 +1059,10 @@ skip
 if
 =
 apple_silicon
+win10_2004
+#
+Bug
+1723573
 [
 browser_ext_mousewheel_zoom
 .
@@ -1289,6 +1309,10 @@ fission
 #
 bug
 1699367
+win10_2004
+#
+Bug
+1723573
 [
 browser_ext_popup_sendMessage
 .
@@ -1440,6 +1464,14 @@ browser_ext_sidebarAction_click
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_ext_sidebarAction_context
 .
@@ -1455,6 +1487,10 @@ skip
 if
 =
 apple_silicon
+win10_2004
+#
+Bug
+1723573
 [
 browser_ext_sidebarAction_httpAuth
 .
@@ -1814,6 +1850,14 @@ browser_ext_tabs_onUpdated_filter
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_ext_tabs_opener
 .
@@ -1964,6 +2008,18 @@ bits
 #
 Bug
 1651261
+win10_2004
+&
+&
+(
+debug
+|
+|
+asan
+)
+#
+Bug
+1723573
 [
 browser_ext_urlbar
 .
