--- a/browser/components/sessionstore/test/browser.ini
+++ b/browser/components/sessionstore/test/browser.ini
@@ -578,6 +578,10 @@ e10s
 |
 !
 crashreporter
+win10_2004
+#
+Bug
+1723573
 [
 browser_revive_crashed_bg_tabs
 .
@@ -728,6 +732,10 @@ debug
 #
 Bug
 1638958
+win10_2004
+#
+Bug
+1723573
 [
 browser_merge_closed_tabs
 .
@@ -2210,3 +2218,7 @@ verify
 #
 bug
 1709907
+win10_2004
+#
+Bug
+1723573
