--- a/dom/security/test/mixedcontentblocker/browser.ini
+++ b/dom/security/test/mixedcontentblocker/browser.ini
@@ -16,6 +16,17 @@ browser_test_mixed_content_download
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+&
+&
+debug
+#
+Bug
+1723573
 [
 browser_mixed_content_auto_upgrade_display_console
 .
