--- a/dom/webauthn/tests/browser/browser.ini
+++ b/dom/webauthn/tests/browser/browser.ini
@@ -69,6 +69,14 @@ not
 relevant
 on
 1903
+win10_2004
+#
+Test
+not
+relevant
+on
+1903
++
 [
 browser_fido_appid_extension
 .
@@ -103,6 +111,14 @@ not
 relevant
 on
 1903
+win10_2004
+#
+Test
+not
+relevant
+on
+1903
++
 [
 browser_webauthn_prompts
 .
@@ -137,6 +153,14 @@ not
 relevant
 on
 1903
+win10_2004
+#
+Test
+not
+relevant
+on
+1903
++
 [
 browser_webauthn_telemetry
 .
@@ -171,6 +195,14 @@ not
 relevant
 on
 1903
+win10_2004
+#
+Test
+not
+relevant
+on
+1903
++
 fission
 &
 &
