--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -546,6 +546,14 @@ browser_doorhanger_toggles
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_doorhanger_username_edits
 .
@@ -683,6 +691,10 @@ bits
 #
 Bug
 1683848
+win10_2004
+#
+Bug
+1723573
 [
 browser_openPasswordManager
 .
