--- a/toolkit/components/viewsource/test/browser/browser.ini
+++ b/toolkit/components/viewsource/test/browser/browser.ini
@@ -83,6 +83,10 @@ new
 Fission
 platform
 triage
+win10_2004
+#
+Bug
+1723573
 [
 browser_gotoline
 .
@@ -133,3 +137,11 @@ browser_viewsourceprefs
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
