--- a/browser/components/uitour/test/browser.ini
+++ b/browser/components/uitour/test/browser.ini
@@ -69,16 +69,36 @@ asan
 #
 updateUI
 leaks
+win10_2004
+#
+Bug
+1723573
 [
 browser_fxa_config
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_openPreferences
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_openSearchPanel
 .
