--- a/browser/components/urlbar/tests/browser/browser.ini
+++ b/browser/components/urlbar/tests/browser/browser.ini
@@ -887,6 +887,14 @@ browser_removeUnsafeProtocolsFromURLBarPaste
 .
 js
 ]
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_restoreEmptyInput
 .
