--- a/browser/modules/test/browser/browser.ini
+++ b/browser/modules/test/browser/browser.ini
@@ -485,6 +485,14 @@ js
 https_first_disabled
 =
 true
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1723573
 [
 browser_UsageTelemetry_private_and_restore
 .
