Bug 1726638 - Introduce nsIDOMWindowUtils.toScreenRect. r=tnikkel
Differential Revision: https://phabricator.services.mozilla.com/D123175

UltraBlame original commit: 714f689b90bb1630d78f8047ca283194fd07b321

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -4093,6 +4093,18 @@ file_title
 .
 xhtml
 [
+test_toScreenRect
+.
+html
+]
+support
+-
+files
+=
+file_toScreenRect
+.
+html
+[
 test_treewalker_nextsibling
 .
 xml
