--- a/dom/events/test/pointerevents/mochitest.ini
+++ b/dom/events/test/pointerevents/mochitest.ini
@@ -147,6 +147,43 @@ bug_1420589_iframe1
 .
 html
 [
+test_bug1725416
+.
+html
+]
+skip
+-
+if
+=
+os
+=
+=
+'
+android
+'
+#
+Bug
+1312791
+support
+-
+files
+=
+!
+/
+gfx
+/
+layers
+/
+apz
+/
+test
+/
+mochitest
+/
+apz_test_native_event_utils
+.
+js
+[
 test_multiple_touches
 .
 html
